--- a/templates/core/includes/partial_alvo_list_home.html
+++ b/templates/core/includes/partial_alvo_list_home.html
@@ -7,11 +7,11 @@
   <td>{{ alvo.lon }}</td>
   <td>{{ alvo.data_expiracao }}</td>
   <td style="width: 150px">
-    <button type="button" class="btn btn-warning btn-sm js-update-alvo" data-url="{% url 'core:alvo_update' alvo.id %}"> <span class="glyphicon glyphicon-pencil"></span> Editar</button>
+    <button type="button" class="btn btn-warning btn-sm js-update-alvo" data-url="{% url 'core:alvo_update' alvo.id %}"> <span class="glyphicon glyphicon-pencil"></span> Edit</button>
     <button type="button"
             class="btn btn-danger btn-sm js-delete-alvo"
             data-url="{% url 'core:alvo_delete' alvo.id %}">
-      <span class="glyphicon glyphicon-trash"></span> Eliminar
+      <span class="glyphicon glyphicon-trash"></span> Delete
     </button>
   </td>
 </tr>
